Run "Code cleanup..."